# octohub

./: .gitignore  .pre-commit-config.yaml  API.md  Cargo.toml  INSTRUCTIONS.md  README.md  octohub-admin.sh  octohub.toml
.github/workflows/: ci.yml  release.yml
llm/modal/: glm-5.py  glm-51.py  kimi-k25.py  kimi-k26.py  mimo-v2-flash.py  qwen3-30b-a3b.py  qwen35-27b-fp8.py  qwen35-35b-a3b.py  qwen35-9b.py
src/: auth.rs  config.rs  main.rs
src/api/: admin.rs  handler.rs  mod.rs  types.rs
src/proxy/: engine.rs
src/storage/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
